--- a/app/views/shares/_header_nav.html.erb
+++ b/app/views/shares/_header_nav.html.erb
@@ -21,9 +21,9 @@
             <div class="collapse navbar-collapse">
               <ul class="nav navbar-nav navbar-right">
                 <li class="smooth-menu"><a href="#home">home</a></li>
-                <li class="smooth-menu"><a href="#gallery">Destination</a></li>
                 <li class="smooth-menu"><a href="#pack">Packages </a></li>
                 <li class="smooth-menu"><a href="#blog">blog</a></li>
+                <li class="smooth-menu"><a href="#gallery">Destination</a></li>
                 <li class="smooth-menu"><a href="#subs">subscription</a></li>
                 <li><%= link_to t("locale.en"), locale: :en %></li>
                 <li><%= link_to t("locale.vi"), locale: :vi %></li>
@@ -31,7 +31,7 @@
                   <li>
                     <a href="#">
                       <i class="font-size-30 color-ff8f00d9 fa fa-lock"></i>
-                      Account
+                      <%= @current_user.name %>
                     </a>
                   </li>
                   <li>
