--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -75,102 +75,13 @@
 
 
 <!--packages start-->
-<%= render "package_tours" %>
-<!--packages end-->
-
-
-<!--blog start-->
-<section id="blog" class="blog">
+<section id="pack" class="packages">
   <div class="container">
-    <div class="blog-details">
-      <div class="gallary-header text-center">
-        <h2>
-          latest news
-        </h2>
 
-      </div><!--/.gallery-header-->
-      <div class="blog-content">
-        <div class="row">
-
-          <div class="col-sm-4 col-md-4">
-            <div class="thumbnail">
-              <h2>trending news <span>15 november 2017</span></h2>
-              <div class="thumbnail-img">
-                <%= image_tag "blog/b1.jpg", alt: "blog-img" %>
-                <div class="thumbnail-img-overlay"></div><!--/.thumbnail-img-overlay-->
-
-              </div><!--/.thumbnail-img-->
-
-              <div class="caption">
-                <div class="blog-txt">
-                  <h3>
-                    <a href="#">
-                      Discover on beautiful weather, Fantastic foods and historical place in Prag
-                    </a>
-                  </h3>
-                  <p>
-                    Lorem ipsum dolor sit amet, contur adip elit, sed do mod incid ut labore et dolore magna aliqua. Ut enim ad minim veniam
-                  </p>
-                  <a href="#">Read More</a>
-                </div><!--/.blog-txt-->
-              </div><!--/.caption-->
-            </div><!--/.thumbnail-->
-
-          </div><!--/.col-->
-
-          <div class="col-sm-4 col-md-4">
-            <div class="thumbnail">
-              <h2>trending news <span>15 november 2017</span></h2>
-              <div class="thumbnail-img">
-                <%= image_tag "blog/b2.jpg", alt: "blog-img" %>
-                <div class="thumbnail-img-overlay"></div><!--/.thumbnail-img-overlay-->
-
-              </div><!--/.thumbnail-img-->
-              <div class="caption">
-                <div class="blog-txt">
-                  <h3>
-                    <a href="#">
-                      Discover on beautiful weather, Fantastic foods and historical place in india
-                    </a>
-                  </h3>
-                  <p>
-                    Lorem ipsum dolor sit amet, contur adip elit, sed do mod incid ut labore et dolore magna aliqua. Ut enim ad minim veniam
-                  </p>
-                  <a href="#">Read More</a>
-                </div><!--/.blog-txt-->
-              </div><!--/.caption-->
-            </div><!--/.thumbnail-->
-
-          </div><!--/.col-->
-
-          <div class="col-sm-4 col-md-4">
-            <div class="thumbnail">
-              <h2>trending news <span>15 november 2017</span></h2>
-              <div class="thumbnail-img">
-                <%= image_tag "blog/b3.jpg", alt: "blog-img" %>
-                <div class="thumbnail-img-overlay"></div><!--/.thumbnail-img-overlay-->
-
-              </div><!--/.thumbnail-img-->
-              <div class="caption">
-                <div class="blog-txt">
-                  <h3><a href="#">10 Most Natural place to Discover</a></h3>
-                  <p>
-                    Lorem ipsum dolor sit amet, contur adip elit, sed do mod incid ut labore et dolore magna aliqua. Ut enim ad minim veniam
-                  </p>
-                  <a href="#">Read More</a>
-                </div><!--/.blog-txt-->
-              </div><!--/.caption-->
-            </div><!--/.thumbnail-->
-
-          </div><!--/.col-->
-
-        </div><!--/.row-->
-      </div><!--/.blog-content-->
-    </div><!--/.blog-details-->
-  </div><!--/.container-->
-
-</section><!--/.blog-->
-<!--blog end-->
+    <%= render "package_tours" %>
+  </div>
+</section>
+<!--packages end-->
 
 
 <!-- testemonial Start -->
@@ -399,6 +310,101 @@
 </section><!--/.testimonial-->
 <!-- testemonial End -->
 
+<!--blog start-->
+<section id="blog" class="blog">
+  <div class="container">
+    <div class="blog-details">
+      <div class="gallary-header text-center">
+        <h2>
+          latest news
+        </h2>
+
+      </div><!--/.gallery-header-->
+      <div class="blog-content">
+        <div class="row">
+
+          <div class="col-sm-4 col-md-4">
+            <div class="thumbnail">
+              <h2>trending news <span>15 november 2017</span></h2>
+              <div class="thumbnail-img">
+                <%= image_tag "blog/b1.jpg", alt: "blog-img" %>
+                <div class="thumbnail-img-overlay"></div><!--/.thumbnail-img-overlay-->
+
+              </div><!--/.thumbnail-img-->
+
+              <div class="caption">
+                <div class="blog-txt">
+                  <h3>
+                    <a href="#">
+                      Discover on beautiful weather, Fantastic foods and historical place in Prag
+                    </a>
+                  </h3>
+                  <p>
+                    Lorem ipsum dolor sit amet, contur adip elit, sed do mod incid ut labore et dolore magna aliqua. Ut enim ad minim veniam
+                  </p>
+                  <a href="#">Read More</a>
+                </div><!--/.blog-txt-->
+              </div><!--/.caption-->
+            </div><!--/.thumbnail-->
+
+          </div><!--/.col-->
+
+          <div class="col-sm-4 col-md-4">
+            <div class="thumbnail">
+              <h2>trending news <span>15 november 2017</span></h2>
+              <div class="thumbnail-img">
+                <%= image_tag "blog/b2.jpg", alt: "blog-img" %>
+                <div class="thumbnail-img-overlay"></div><!--/.thumbnail-img-overlay-->
+
+              </div><!--/.thumbnail-img-->
+              <div class="caption">
+                <div class="blog-txt">
+                  <h3>
+                    <a href="#">
+                      Discover on beautiful weather, Fantastic foods and historical place in india
+                    </a>
+                  </h3>
+                  <p>
+                    Lorem ipsum dolor sit amet, contur adip elit, sed do mod incid ut labore et dolore magna aliqua. Ut enim ad minim veniam
+                  </p>
+                  <a href="#">Read More</a>
+                </div><!--/.blog-txt-->
+              </div><!--/.caption-->
+            </div><!--/.thumbnail-->
+
+          </div><!--/.col-->
+
+          <div class="col-sm-4 col-md-4">
+            <div class="thumbnail">
+              <h2>trending news <span>15 november 2017</span></h2>
+              <div class="thumbnail-img">
+                <%= image_tag "blog/b3.jpg", alt: "blog-img" %>
+                <div class="thumbnail-img-overlay"></div><!--/.thumbnail-img-overlay-->
+
+              </div><!--/.thumbnail-img-->
+              <div class="caption">
+                <div class="blog-txt">
+                  <h3><a href="#">10 Most Natural place to Discover</a></h3>
+                  <p>
+                    Lorem ipsum dolor sit amet, contur adip elit, sed do mod incid ut labore et dolore magna aliqua. Ut enim ad minim veniam
+                  </p>
+                  <a href="#">Read More</a>
+                </div><!--/.blog-txt-->
+              </div><!--/.caption-->
+            </div><!--/.thumbnail-->
+
+          </div><!--/.col-->
+
+        </div><!--/.row-->
+      </div><!--/.blog-content-->
+    </div><!--/.blog-details-->
+  </div><!--/.container-->
+
+</section><!--/.blog-->
+<!--blog end-->
+
+
+
 <!--galley start-->
 <section id="gallery" class="gallery">
   <div class="container">
@@ -495,33 +501,3 @@
 
 </section><!--/.gallery-->
 <!--gallery end-->
-
-
-<!--subscribe start-->
-<section id="subs" class="subscribe">
-  <div class="container">
-    <div class="subscribe-title text-center">
-      <h2>
-        Join our Subscribers List to Get Regular Update
-      </h2>
-      <p>
-        Subscribe Now. We will send you Best offer for your Trip
-      </p>
-    </div>
-    <form>
-      <div class="row">
-        <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
-          <div class="custom-input-group">
-            <input type="email" class="form-control" placeholder="Enter your Email Here">
-            <button class="appsLand-btn subscribe-btn">Subscribe</button>
-            <div class="clearfix"></div>
-            <i class="fa fa-envelope"></i>
-          </div>
-
-        </div>
-      </div>
-    </form>
-  </div>
-
-</section>
-<!--subscribe end-->
