--- a/app/views/tours/_tour.html.erb
+++ b/app/views/tours/_tour.html.erb
@@ -3,7 +3,7 @@
     <%= check_image(tour.image) %>
     <div class="single-package-item-txt">
       <h3>
-        <span><%= tour.name %></span></br>
+        <span><%= link_to tour.name, tour_path(tour) %></br>
         <span class="pull-right"><%= number_to_currency tour.price %></span>
       </h3>
       <div class="packages-para">
