--- a/app/views/shares/_header_nav.html.erb
+++ b/app/views/shares/_header_nav.html.erb
@@ -24,9 +24,8 @@
                 <li class="smooth-menu"><a href="#pack">Packages </a></li>
                 <li class="smooth-menu"><a href="#blog">blog</a></li>
                 <li class="smooth-menu"><a href="#gallery">Destination</a></li>
-                <li class="smooth-menu"><a href="#subs">subscription</a></li>
-                <li><%= link_to t("locale.en"), locale: :en %></li>
-                <li><%= link_to t("locale.vi"), locale: :vi %></li>
+                <li><%= link_to t("tours"), tours_path %></li>
+                <li><%= link_to t("reviews") %></li>
                 <% if logged_in? %>
                   <li>
                     <a href="#">
