--- a/app/views/tours/show.html.erb
+++ b/app/views/tours/show.html.erb
@@ -1,2 +1,72 @@
-<h1>Tours#show</h1>
-<p>Find me in app/views/tours/show.html.erb</p>
+<!--about-us start -->
+<section id="home" class="about-us">
+  <div class="container">
+    <div class="about-us-content">
+      <div class="row header-image">
+      </div><!--/.row-->
+    </div><!--/.about-us-content-->
+  </div><!--/.container-->
+
+</section><!--/.about-us-->
+<!--about-us end -->
+<%= render "static_pages/travel_box" %>
+<!--travel-box end-->
+
+
+<!--galley start-->
+<div class="container">
+  <br>
+  <div class="card border-0">
+    <div class="row">
+      <aside class="col-sm-3">
+        <article class="gallery-wrap">
+          <div class="img-big-wrap">
+            <div>
+              <%= check_image(@tour.image) %>
+            </div>
+          </div>
+        </article>
+      </aside>
+
+      <aside class="col-sm-5">
+        <article class="card-body m-0 pt-0 pl-5">
+          <h3 class="title text-uppercase"><%= @tour.name %></h3>
+          <div class="rating">
+            <div class="stars">
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star"></span>
+              <span class="fa fa-star"></span>
+              <span class="review-no ml-2">(41 avis)</span>
+            </div>
+          </div>
+          <div class="mb-3 mt-3">
+              <span class="h7 text-success">En stock.</span>
+          </div>
+          <div class="mb-3 mt-3">
+            <span class="price-title">Prix :</span>
+            <span class="price color-price-waanbii"><%= number_to_currency @tour.price %></span>
+          </div>
+        <dl class="item-property">
+          <dt>Description</dt>
+          <dd><p><%= @tour.description %></p></dd>
+        </dl>
+        </article>
+      </aside>
+
+      <aside class="col-sm-4">
+        <div class="row" id="form-booking-tour">
+          <%= render "form_booking_tour" %>
+        </div>
+      </aside>
+
+      <aside class="col-sm-8" id="comments">
+        <%= render "comments" %>
+
+      </aside>
+
+    </div>
+  </div>
+</div>
+<!--container
