--- a/app/views/tours/show.html.erb
+++ b/app/views/tours/show.html.erb
@@ -1,2 +1,136 @@
-<h1>Tours#show</h1>
-<p>Find me in app/views/tours/show.html.erb</p>
+<!--about-us start -->
+<section id="home" class="about-us">
+  <div class="container">
+    <div class="about-us-content">
+      <div class="row header-image">
+      </div><!--/.row-->
+    </div><!--/.about-us-content-->
+  </div><!--/.container-->
+
+</section><!--/.about-us-->
+<!--about-us end -->
+<%= render "static_pages/travel_box" %>
+<!--travel-box end-->
+
+
+<!--galley start-->
+<div class="container">
+  <br>
+  <div class="card border-0">
+    <div class="row">
+      <aside class="col-sm-3">
+        <article class="gallery-wrap">
+          <div class="img-big-wrap">
+            <div>
+              <%= check_image(@tour.image) %>
+            </div>
+          </div>
+        </article>
+      </aside>
+
+      <aside class="col-sm-5">
+        <article class="card-body m-0 pt-0 pl-5">
+          <h3 class="title text-uppercase"><%= @tour.name %></h3>
+          <div class="rating">
+            <div class="stars">
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star"></span>
+              <span class="fa fa-star"></span>
+              <span class="review-no ml-2">(41 avis)</span>
+            </div>
+          </div>
+          <div class="mb-3 mt-3">
+              <span class="h7 text-success">En stock.</span>
+          </div>
+          <div class="mb-3 mt-3">
+            <span class="price-title">Prix :</span>
+            <span class="price color-price-waanbii"><%= number_to_currency @tour.price %></span>
+          </div>
+        <dl class="item-property">
+          <dt>Description</dt>
+          <dd><p><%= @tour.description %></p></dd>
+        </dl>
+        <dl class="param param-feature">
+          <dt>Poids</dt>
+          <dd>200g</dd>
+        </dl>
+        </article>
+      </aside>
+
+      <aside class="col-sm-4">
+        <div class="row">
+          <div class="col-12 col-md-12">
+            <!--Form with header-->
+            <form action="mail.php" method="post">
+              <div class="card border-primary rounded-0">
+                <div class="card-header p-0">
+                  <div class="bg-info text-white text-center py-2">
+                    <h3><i class="fa fa-envelope"></i> Contactanos</h3>
+                    <p class="m-0">Con gusto te ayudaremos</p>
+                  </div>
+                </div>
+                <div class="card-body p-3">
+                  <!--Body-->
+                  <div class="form-group">
+                    <div class="input-group-prepend">
+                      <div class="input-group-text"><i class="fa fa-user text-info"></i></div>
+                    </div>
+                    <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Nombre y Apellido" required>
+                  </div>
+                  <div class="form-group">
+                    <div class="input-group-prepend">
+                      <div class="input-group-text"><i class="fa fa-envelope text-info"></i></div>
+                    </div>
+                    <input type="email" class="form-control" id="nombre" name="email" placeholder="ejemplo@gmail.com" required>
+                  </div>
+
+                  <div class="form-group">
+                    <div class="input-group-prepend">
+                      <div class="input-group-text"><i class="fa fa-comment text-info"></i></div>
+                    </div>
+                    <textarea class="form-control" placeholder="Envianos tu Mensaje" required></textarea>
+                  </div>
+                  <div id="input_container">
+                    <input type="text" id="input" value>
+                    <img src="https://cdn4.iconfinder.com/data/icons/36-slim-icons/87/calender.png" id="input_img">
+                  </div>
+
+                  <div class="text-center">
+                    <input type="submit" value="Enviar" class="btn btn-info btn-block rounded-0 py-2">
+                  </div>
+                </div>
+              </div>
+            </form>
+            <!--Form with header-->
+          </div>
+        </div>
+      </aside>
+    </div>
+  </div>
+</div>
+<!--container.//-->
+<style type="text/css">
+  #input_container {
+    position:relative;
+    padding:0 0 0 20px;
+    margin:0 20px;
+    background:#ddd;
+    direction: rtl;
+    width: 200px;
+}
+#input {
+    height:20px;
+    margin:0;
+    padding-right: 30px;
+    width: 100%;
+}
+#input_img {
+    position:absolute;
+    bottom:2px;
+    right:5px;
+    width:24px;
+    height:24px;
+}
+</style>
