finish [Bookings] Create Book tour

--- a/app/views/shares/_header_nav.html.erb
+++ b/app/views/shares/_header_nav.html.erb
@@ -46,10 +46,7 @@
                       Login
                     <% end %>
                   </li>
-                <% end %>
-                <li>
-                  <button class="book-btn">Book now </button>
-                </li><!--/.project-btn-->
+                <% end %><!--/.project-btn-->
               </ul>
             </div><!-- /.navbar-collapse -->
           </div><!-- /.main-menu-->
@@ -58,5 +55,4 @@
       <div class="home-border"></div><!-- /.home-border-->
     </div><!-- /.container-->
   </div><!-- /.header-area -->
-
 </header>
