--- a/app/views/tours/_tour.html.erb
+++ b/app/views/tours/_tour.html.erb
@@ -31,9 +31,7 @@
         </p>
       </div><!--/.packages-review-->
       <div class="about-btn">
-        <button  class="about-view packages-btn">
-          book now
-        </button>
+        <%= link_to "Book now!", tour_path(tour), class: "about-view packages-btn" %>
       </div><!--/.about-btn-->
     </div><!--/.single-package-item-txt-->
   </div><!--/.single-package-item-->
