--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -6,14 +6,14 @@
       </div><!--/.row-->
     </div><!--/.about-us-content-->
   </div><!--/.container-->
+
 </section><!--/.about-us-->
 
-<!--galley start-->
 <div class="container">
   <br>
   <div class="card border-0">
     <div class="row">
-      <aside class="col-sm-3">
+      <aside class="col-sm-4">
         <article class="gallery-wrap">
           <div class="img-big-wrap">
             <div>
@@ -23,7 +23,7 @@
         </article>
       </aside>
 
-      <aside class="col-sm-5">
+      <aside class="col-sm-8">
         <article class="card-body m-0 pt-0 pl-5" id="tour-info">
           <h3 class="title text-uppercase"><%= @tour.name %></h3>
           <div class="rating info">
@@ -45,12 +45,13 @@
           </dl>
         </article>
       </aside>
-
-      <aside class="col-sm-4">
-        <div class="row" id="form-booking-tour">
-          <%= render "/tours/form_booking_tour" %>
+    	<aside class="col-sm-12">
+        <div class="row">
+      		<div id="form-new-review">
+      			<%= render "/reviews/form" %>
+      		</div>
         </div>
-      </aside>
+    	</aside>
     </div>
   </div>
 </div>
