--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -1,5 +1,5 @@
 <aside class="col-sm-3">
-  <div id="testemonial-carousel">
+  <div>
     <div class="home1-testm item">
       <div class="home1-testm-single text-center">
         <div class="home1-testm-img">
