--- a/app/views/reviews/_search.html.erb
+++ b/app/views/reviews/_search.html.erb
@@ -3,7 +3,7 @@
     <div class="single-tab-select-box">
       <h2>Tours</h2>
       <div class="travel-select-icon">
-        <select class="form-control ">
+        <select class="form-control">
 
           <option value="default">5</option><!-- /.option-->
 
@@ -20,12 +20,12 @@
     <div class="single-tab-select-box">
       <h2>Text</h2>
       <div class="">
-        <input class="form-control ">
+        <input class="form-control" style="height: 40px;">
       </div><!-- /.travel-select-icon -->
     </div><!--/.single-tab-select-box-->
   </div><!--/.col-->
   <div class="col-lg-4 col-md-3 col-sm-4">
-    <div class="about-btn pull-right">
+    <div class="about-btn">
       <button  class="about-view travel-btn">
         search
       </button><!--/.travel-btn-->
