--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -16,15 +16,15 @@
       <div class="col-md-12">
         <nav>
           <div class="nav nav-tabs nav-fill" id="nav-tab" role="tablist">
-            <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">Reivews</a>
-            <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#nav-profile" role="tab" aria-controls="nav-profile" aria-selected="false">My Review</a>
+            <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#reviews_tab" role="tab" aria-controls="nav-home" aria-selected="true">Reivews</a>
+            <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#my_reviews_tab" role="tab" aria-controls="nav-profile" aria-selected="false">My Review</a>
           </div>
         </nav>
-        <div class="tab-content" id="nav-tabContent">
-          <div class="tab-pane fade show active in" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
+        <div class="tab-content mt-3" id="nav-tabContent">
+          <div class="tab-pane fade show active in" id="reviews_tab" role="tabpanel" aria-labelledby="nav-home-tab">
             <%= render "reviews" %>
           </div>
-          <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
+          <div class="tab-pane fade" id="my_reviews_tab" role="tabpanel" aria-labelledby="nav-profile-tab">
             <table class="table" cellspacing="0">
               <thead>
                 <tr>
@@ -45,6 +45,7 @@
                 <% end %>
               </tbody>
             </table>
+            <%= will_paginate @my_reviews, class: "my_reviews", :param_name => 'my_reviews' %>
           </div>
         </div>
       </div>
@@ -53,9 +54,8 @@
 </section>
 
 <style type="text/css">
-  .project-tab {
-    padding: 10%;
-    margin-top: -8%;
+.project-tab {
+  margin-top: 20px;
 }
 .project-tab #tabs{
     background: #007b5e;
@@ -71,6 +71,7 @@
     border-bottom: 3px solid !important;
     font-size: 16px;
     font-weight: bold;
+    padding: 10px;
 }
 .project-tab .nav-link {
     border: 1px solid transparent;
@@ -91,5 +92,8 @@
     text-decoration: none;
     color: #333;
     font-weight: 600;
+}
+.tab-content {
+  margin-top: 20px;
 }
 </style>
