--- a/app/views/reviews/_search.html.erb
+++ b/app/views/reviews/_search.html.erb
@@ -1,5 +1,5 @@
 <div class="row bg-info card border-primary">
-  <div class="col-lg-4 col-md-3 col-sm-4">
+  <div class="col-lg-3 col-md-3 col-sm-4">
     <div class="single-tab-select-box">
       <h2>Tours</h2>
       <div class="travel-select-icon">
@@ -16,7 +16,7 @@
       </div><!-- /.travel-select-icon -->
     </div><!--/.single-tab-select-box-->
   </div>
-  <div class="col-lg-4 col-md-3 col-sm-4">
+  <div class="col-lg-3 col-md-3 col-sm-4">
     <div class="single-tab-select-box">
       <h2>Text</h2>
       <div class="">
@@ -24,7 +24,20 @@
       </div><!-- /.travel-select-icon -->
     </div><!--/.single-tab-select-box-->
   </div><!--/.col-->
-  <div class="col-lg-4 col-md-3 col-sm-4">
+
+ <div class="col-lg-3 col-md-3 col-sm-4">
+    <div class="single-tab-select-box">
+      <h2>Tour name</h2>
+      <div class="travel-select-icon">
+        <select class="form-control">
+          <% @tours.each do |tours| %>
+            <option value="<%=tours.name%>"><%=tours.name%></option><!-- /.option-->
+          <%end %>
+        </select><!-- /.select-->
+      </div><!-- /.travel-select-icon -->
+    </div><!--/.single-tab-select-box-->
+  </div>
+  <div class="col-lg-3 col-md-3 col-sm-4">
     <div class="about-btn">
       <button  class="about-view travel-btn">
         search
