--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -16,7 +16,7 @@
       <div class="col-md-12">
         <nav>
           <div class="nav nav-tabs nav-fill" id="nav-tab" role="tablist">
-            <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#reviews_tab" role="tab" aria-controls="nav-home" aria-selected="true">Reivews</a>
+            <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#reviews_tab" role="tab" aria-controls="nav-home" aria-selected="true">Reviews</a>
             <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#my_reviews_tab" role="tab" aria-controls="nav-profile" aria-selected="false">My Review</a>
           </div>
         </nav>
