fix bug change status of Admin role

--- a/app/views/admin/booking_tours/_booking_tour.html.erb
+++ b/app/views/admin/booking_tours/_booking_tour.html.erb
@@ -21,19 +21,20 @@
     <% end %>
 
     <% unless booking_tour.rejected? || booking_tour.approved? %>
-      <%= link_to admin_booking_tour_path(id: booking_tour.id, status: BookingTour.statuses[:appoved]), method: :patch, data: {confirm: "Bạn có chắc chắn muốn accept tour"}, remote: true,
+      <%= link_to approved_admin_booking_tour_path(id: booking_tour.id), method: :patch, data: {confirm: "Bạn có chắc chắn muốn accept tour"}, remote: true,
       'data-toggle' => "tooltip", "data-placement" => "top", "title" => "Approved" do %>
         <%= image_tag "booking/tick.png", class: "padding-3", size: "30x25", alt: "Approved" %>
       <% end %>
     <% end %>
-
-    <%= link_to admin_booking_tour_path(id: booking_tour.id, status: BookingTour.statuses[:rejected]), method: :patch, data: {confirm: "Bạn có chắc chắn muốn từ chối tour"}, remote: true,
-      'data-toggle' => "tooltip", "data-placement" => "top", "title" => "Rejected" do %>
-      <%= image_tag "booking/cross.png", class: "padding-3", size: "30x25", alt: "Rejected" %>
+    <% unless booking_tour.rejected? %>
+      <%= link_to rejected_admin_booking_tour_path(id: booking_tour.id), method: :patch, data: {confirm: "Bạn có chắc chắn muốn từ chối tour"}, remote: true,
+        'data-toggle' => "tooltip", "data-placement" => "top", "title" => "Rejected" do %>
+        <%= image_tag "booking/cross.png", class: "padding-3", size: "30x25", alt: "Rejected" %>
+      <% end %>
     <% end %>
 
     <% if booking_tour.waiting? %>
-      <%= link_to admin_booking_tour_path(id: booking_tour.id, status: BookingTour.statuses[:pending]), method: :patch, data: {confirm: "Bạn có chắc chắn muốn tạm hoãn tour"}, remote: true,
+      <%= link_to pending_admin_booking_tour_path(id: booking_tour.id), method: :patch, data: {confirm: "Bạn có chắc chắn muốn tạm hoãn tour"}, remote: true,
       'data-toggle' => "tooltip", "data-placement" => "top", "title" => "Pending" do %>
         <%= image_tag "booking/folder.png", class: "padding-3", size: "30x25", alt: "Pending" %>
       <% end %>
